# gitward

./: .gitattributes  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: App.tsx  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: credential.rs  fs.rs  git.rs  github_cli.rs  guard.rs  health.rs  identity.rs  launcher.rs  mod.rs  sync.rs
src-tauri/src/models/: result.rs
src-tauri/src/services/: command.rs  credential.rs  git.rs  github_cli.rs  guard.rs  health.rs  identity.rs  launcher.rs  mod.rs  sync.rs
src/components/layout/: AppShell.tsx  Page.tsx  Sidebar.tsx  nav.ts
src/features/backup/: backup.test.ts  backup.ts
src/features/command-palette/: CommandPalette.tsx
src/features/logs/: store.ts
src/lib/: i18n.ts  queryClient.ts  queryKeys.ts  selection.ts  theme.test.ts  theme.ts  toast.ts
src/pages/: AppIdentityPage.tsx  GitAccountsPage.tsx  GitHubCliPage.tsx  LogsPage.tsx  ProjectsPage.tsx  SettingsPage.tsx
src/services/: credential.service.ts  dialog.service.ts  fs.service.ts  git.service.ts  githubCli.service.ts  guard.service.ts  health.service.ts  identity.service.ts  launcher.service.ts  store.service.ts  sync.service.ts  tauri.test.ts  tauri.ts
src/stores/: settingsStore.ts  uiStore.ts
src/styles/: global.css
src/types/: index.ts
(+19 files in other folders)
