[package]
name = "gitward"
version = "0.1.0"
description = "Keep the right identity on every repository."
authors = ["Riyoway"]
license = "MIT"
repository = "https://github.com/Riyoway/gitward"
edition = "2021"
rust-version = "1.77"

[lib]
# Consumed by main.rs (desktop) and the mobile entry point.
name = "gitward_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
